名前でユーザーのステータスを更新できるようにした
