# src/api/docs/swagger.json
@@ -8,7 +8,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/v1/players/{id}/status/{status}": {
+        "/api/v1/players/{name}/status/{status}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -19,9 +19,9 @@
                 "summary": "プレイヤーの状態を更新するAPI",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "player id",
-                        "name": "id",
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
                         "in": "path",
                         "required": true
                     },
